# greedy

./: .gitignore  Cargo.toml  Dockerfile  README.md  justfile
.github/workflows/: ci.yaml
config/: default.toml
src/: config.rs  error.rs  lib.rs  main.rs
src/cache/: mod.rs
src/http/: mod.rs  processor.rs  stats.rs
src/image/: mod.rs
