[package]
name = "greedy"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["macros"] }
config = "0.14.0"
serde = "1.0.210"
thiserror = "1.0.64"
tower = "0.5.1"
tower-http = { version = "0.6.1", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = "0.3"
tokio = { version = "1", features = ["full"] }
image = { version = "0.25.4", features = ["avif-native", "webp", "png"] }
base64 = "0.22.1"
ureq = { version = "2.10.1", features = ["json"] }
moka = { version = "0.12.8", features = ["future"] }
quickcheck = "1.0.3"
url = "2.5.2"
